first blog added

--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my first git repo</title>
+    <link rel="stylesheet" href="styles/blog.css">
+
 </head>
 <body>
+   <div>
+    <h3>my website</h3>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo, aspernatur amet dolores numquam, architecto dicta laborum fugiat voluptatem est culpa tempora id corrupti ullam? Facilis exercitationem dolores consectetur neque dolor?</p>
+   </div> 
     
 </body>
 </html>
