second and third

--- a/index.html
+++ b/index.html
@@ -8,10 +8,20 @@
 
 </head>
 <body>
-   <div>
-    <h3>my website</h3>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo, aspernatur amet dolores numquam, architecto dicta laborum fugiat voluptatem est culpa tempora id corrupti ullam? Facilis exercitationem dolores consectetur neque dolor?</p>
-   </div> 
     
+
+<div>
+ <h3>my website</h3>
+ <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo, aspernatur amet dolores numquam, architecto dicta laborum fugiat voluptatem est culpa tempora id corrupti ullam? Facilis exercitationem dolores consectetur neque dolor?</p>
+</div> 
+<div>
+ <h3>my  second website</h3>
+ <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo, aspernatur amet dolores numquam, architecto dicta laborum fugiat voluptatem est culpa tempora id corrupti ullam? Facilis exercitationem dolores consectetur neque dolor?</p>
+</div> 
+<div>
+ <h3>my third website</h3>
+ <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo, aspernatur amet dolores numquam, architecto dicta laborum fugiat voluptatem est culpa tempora id corrupti ullam? Facilis exercitationem dolores consectetur neque dolor?</p>
+</div> 
+
 </body>
 </html>
