list to push code

--- a/index.html
+++ b/index.html
@@ -22,6 +22,15 @@
  <h3>my third website</h3>
  <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo, aspernatur amet dolores numquam, architecto dicta laborum fugiat voluptatem est culpa tempora id corrupti ullam? Facilis exercitationem dolores consectetur neque dolor?</p>
 </div> 
+<div>
+    <h3>git commands</h3>
+    <ul>
+        <li>git add .</li>
+        <li>git commit -m"meaningful massage"</li>
+        <li>git push</li>
+    </ul>
+</div>
+
 
 </body>
 </html>
