--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
         <li>git push</li>
     </ul>
 </div>
+<div>
+    <h3>2nd brother</h3>
+    <img src="images/mcartoon.jpg" alt="">
+</div>
 
 
 </body>
